@@ -63,7 +63,7 @@ module DevKitInstaller
           'libssp-4.6.1-2-mingw32-dll-0.tar.lzma',
           'libgcc-4.6.1-2-mingw32-dll-1.tar.lzma',
           'libstdc++-4.6.1-2-mingw32-dll-6.tar.lzma',
-          'binutils-2.21.53-1-mingw32-bin.tar.lzma',
+          'binutils-2.22-1-mingw32-bin.tar.lzma',
           'mingwrt-3.20-mingw32-dev.tar.gz',
           'mingwrt-3.20-mingw32-dll.tar.gz',
           'w32api-3.17-2-mingw32-dev.tar.lzma',
@@ -106,7 +106,7 @@ module DevKitInstaller
           'libmpc-0.8.1-1-mingw32-dll-2.tar.lzma',
           'libmpfr-2.4.1-1-mingw32-dll-1.tar.lzma',
           'libssp-4.5.2-1-mingw32-dll-0.tar.lzma',
-          'binutils-2.21.53-1-mingw32-bin.tar.lzma',
+          'binutils-2.22-1-mingw32-bin.tar.lzma',
           'mingwrt-3.20-mingw32-dev.tar.gz',
           'mingwrt-3.20-mingw32-dll.tar.gz',
           'w32api-3.17-2-mingw32-dev.tar.lzma',
